[package]
name = "UKSIVTbot"
version = "0.1.0"
edition = "2021"



[dependencies]
rusqlite = "0.32.1"
chrono = "0.4.39"
chrono-tz = "0.10.1"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["blocking"] }
tokio = { version = "1.42.0", features = ["full"] }
anyhow = "1.0.95"
scraper = "0.22.0"
futures = "0.3.1"

pdf-extract = "0.6.5"

memcache = "0.18.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

teloxide = { version = "0.12", features = ["macros"] }
log = "0.4.22"
pretty_env_logger = "0.3.1"
lazy_static = "1.5.0"
bytes = "1.10.0"

[[bin]]
name = "UKSIVTbot"
path = "src/Start.rs"
